Fix forbidden APIs